README.md                           | 2 +-  workflows/hello-world/workflow.yaml | 4 ++--  2 files changed, 3 insertions(+), 3 deletions(-)

--- a/workflows/hello-world/workflow.yaml
+++ b/workflows/hello-world/workflow.yaml
@@ -21,8 +21,8 @@ jobs:
         ssh:
           remoteHost: ${{ inputs.resource.ip }}
         with:
-          repo: https://github.com/parallelworks/interactive_session.git
-          branch: refactor-2026
+          repo: https://github.com/parallelworks/activate-sessions.git
+          branch: main
           sparse_checkout:
             - workflows/${{ inputs.workflow_dir }}
             - utils
