Add two-script pattern to hello-world workflow (#4)
* Add two-script pattern to hello-world workflow

- Separate setup.sh (controller) from start.sh (compute)
- Run setup in preprocessing job before session_runner
- Document controller/compute separation pattern
- Update README with pattern explanation and examples

* Move ssh config to individual steps in preprocessing job

- Place ssh config on each step that needs remote execution
- Follows pattern used in other workflow jobs

--- a/workflows/hello-world/workflow.yaml
+++ b/workflows/hello-world/workflow.yaml
@@ -12,14 +12,14 @@ sessions:
 
 jobs:
   # =============================================================================
-  # PREPROCESSING - runs on controller
+  # PREPROCESSING
   # =============================================================================
   preprocessing:
     steps:
       - name: Checkout service scripts
-        uses: parallelworks/checkout
         ssh:
           remoteHost: ${{ inputs.resource.ip }}
+        uses: parallelworks/checkout
         with:
           repo: https://github.com/parallelworks/activate-sessions.git
           branch: main
@@ -34,6 +34,14 @@ jobs:
           if [ -f inputs.sh ]; then
             scp inputs.sh ${{ inputs.resource.ip }}:${REMOTE_JOB_DIR}
           fi
+
+      - name: Run controller setup
+        ssh:
+          remoteHost: ${{ inputs.resource.ip }}
+        run: |
+          set -e
+          cd workflows/${{ inputs.workflow_dir }}
+          bash setup.sh
 
   # =============================================================================
   # SESSION RUNNER - runs the service script on compute node
