--- a/workflows/hello-world/workflow.yaml
+++ b/workflows/hello-world/workflow.yaml
@@ -35,22 +35,20 @@ jobs:
             scp inputs.sh ${{ inputs.resource.ip }}:${REMOTE_JOB_DIR}
           fi
 
-      - name: Run controller setup
-        ssh:
-          remoteHost: ${{ inputs.resource.ip }}
-        run: |
-          set -e
-          cd workflows/${{ inputs.workflow_dir }}
-          bash setup.sh
-
   # =============================================================================
-  # SESSION RUNNER - runs the service script on compute node
+  # SESSION RUNNER - runs controller setup and service script
   # =============================================================================
   session_runner:
     needs: [preprocessing]
     ssh:
       remoteHost: ${{ inputs.resource.ip }}
     steps:
+      - name: Run controller setup
+        run: |
+          set -e
+          cd workflows/${{ inputs.workflow_dir }}
+          bash setup.sh
+
       - name: Submit session script
         early-cancel: any-job-failed
         uses: marketplace/job_runner/v4.0
