Use sparse checkout for container downloads
- Use sparse checkout instead of full repo clone for containers
- Update setup.sh to use sparse checkout for nginx
- Update start.sh to use sparse checkout for vncserver
- Simplify container path handling
- Change redirect to false in session config

--- a/workflows/desktop/workflow.yaml
+++ b/workflows/desktop/workflow.yaml
@@ -9,7 +9,7 @@ permissions:
 sessions:
   session:
     useTLS: false
-    redirect: true # Desktop uses redirect with custom slug for autoconnect
+    redirect: false # Desktop uses redirect with custom slug for autoconnect
 
 jobs:
   # =============================================================================
