--- a/workflows/hello-world/workflow.yaml
+++ b/workflows/hello-world/workflow.yaml
@@ -8,7 +8,7 @@ permissions:
 sessions:
   session:
     useTLS: false
-    redirect: false
+    redirect: true
 
 jobs:
   # =============================================================================
