Move setup.sh to preprocessing job
Move setup.sh execution from session_runner to preprocessing so outputs
like slug are available before update_session runs. Also updates:

- hello-world and desktop workflows: move setup.sh to preprocessing
- update_session now uses needs.preprocessing.outputs.slug
- All documentation updated to reflect new structure

--- a/workflows/desktop/workflow.yaml
+++ b/workflows/desktop/workflow.yaml
@@ -23,7 +23,7 @@ jobs:
           remoteHost: ${{ inputs.resource.ip }}
         with:
           repo: https://github.com/parallelworks/activate-sessions.git
-          branch: migrate/desktop
+          branch: main
           sparse_checkout:
             - workflows/${{ inputs.workflow_dir }}
             - utils
