Pass PW_SESSION_NAME from workflow to setup.sh
- Add export PW_SESSION_NAME in preprocessing job
- Remove default fallback in setup.sh (use explicit value)
- Fix nginx config indentation in start.sh
- Remove proxy_ssl_verify from nginx config
- Ensures correct session name in basepath

--- a/workflows/desktop/workflow.yaml
+++ b/workflows/desktop/workflow.yaml
@@ -42,6 +42,7 @@ jobs:
         run: |
           set -e
           cd workflows/${{ inputs.workflow_dir }}
+          export PW_SESSION_NAME="${{ sessions.session }}"
           bash setup.sh
 
   # =============================================================================
