Improve service wait script and add CPU-only GPU option
- Change exit to return in wait_service.sh for better sourcing support
- Improve OUTPUTS handling with proper null checks
- Add CPU-only (no GPU) option to SLURM gres dropdown in workflows
- Add workflow runner tests and tools directory

--- a/workflows/desktop/workflow.yaml
+++ b/workflows/desktop/workflow.yaml
@@ -215,9 +215,12 @@ jobs:
           gres:
             label: GPUs (gres)
             type: dropdown
-            default: "gpu:1"
-            tooltip: GPU resource specification (--gres). Keep in sync with training GPU count.
+            default: ""
+            optional: true
+            tooltip: GPU resource specification (--gres). Leave empty for CPU-only jobs.
             options:
+              - value: ""
+                label: "No GPU (CPU only)"
               - value: "gpu:1"
                 label: "1 GPU (gpu:1)"
               - value: "gpu:2"
