--- a/workflows/hello-world/workflow.yaml
+++ b/workflows/hello-world/workflow.yaml
@@ -99,6 +99,8 @@ jobs:
           set -e
           # Source the reusable wait script
           source utils/wait_service.sh
+          # Explicit exit to ensure shell terminates cleanly on SLURM
+          exit 0
 
   # =============================================================================
   # UPDATE SESSION - configure session proxy
