Fix wait_service by running as subprocess instead of sourced
- Execute script with bash instead of source to get clean process exit
- Change all return statements to exit for proper subprocess termination
- Fix cat|while pipe pattern to use input redirection, avoiding subshell
  that can keep SSH sessions open on SLURM

--- a/workflows/hello-world/workflow.yaml
+++ b/workflows/hello-world/workflow.yaml
@@ -96,11 +96,8 @@ jobs:
       - name: Wait for service ready
         early-cancel: any-job-failed
         run: |
-          set -e
-          # Source the reusable wait script
-          source utils/wait_service.sh
-          # Explicit exit to ensure shell terminates cleanly on SLURM
-          exit 0
+          # Execute the wait script (not sourced - runs as subprocess)
+          bash utils/wait_service.sh
 
   # =============================================================================
   # UPDATE SESSION - configure session proxy
