--- a/workflows/hello-world/workflow.yaml
+++ b/workflows/hello-world/workflow.yaml
@@ -25,7 +25,6 @@ jobs:
           branch: main
           sparse_checkout:
             - workflows/${{ inputs.workflow_dir }}
-            - utils
 
       - name: Transfer inputs from user workspace
         run: |
@@ -96,8 +95,28 @@ jobs:
       - name: Wait for service ready
         early-cancel: any-job-failed
         run: |
-          # Execute the wait script (not sourced - runs as subprocess)
-          bash utils/wait_service.sh
+          # Wait for job to start
+          while [ ! -f job.started ]; do
+            [ -f job.ended ] && echo "ERROR: Job ended before starting" && exit 1
+            sleep 3
+          done
+
+          # Read connection info (with NFS cache refresh)
+          sleep 2 && ls -la . >/dev/null 2>&1
+          HOSTNAME=$(cat HOSTNAME)
+          SESSION_PORT=$(cat SESSION_PORT)
+
+          # Wait for service to respond
+          for i in $(seq 1 100); do
+            if curl -s --connect-timeout 5 --max-time 5 "http://${HOSTNAME}:${SESSION_PORT}" -o /dev/null 2>&1; then
+              echo "HOSTNAME=${HOSTNAME}" >> $OUTPUTS
+              echo "SESSION_PORT=${SESSION_PORT}" >> $OUTPUTS
+              exit 0
+            fi
+            [ -f job.ended ] && echo "ERROR: Job ended" && exit 1
+            sleep 3
+          done
+          echo "ERROR: Service timeout" && exit 1
 
   # =============================================================================
   # UPDATE SESSION - configure session proxy
