--- a/workflows/hello-world/workflow.yaml
+++ b/workflows/hello-world/workflow.yaml
@@ -95,25 +95,39 @@ jobs:
       - name: Wait for service ready
         early-cancel: any-job-failed
         run: |
+          echo "=== Wait for Service ==="
+          echo "PW_PARENT_JOB_DIR: ${PW_PARENT_JOB_DIR}"
+          echo "Current directory: $(pwd)"
+          JOB_DIR="${PW_PARENT_JOB_DIR%/}"
+          echo "Looking for markers in: ${JOB_DIR}"
+          ls -la "${JOB_DIR}/" 2>&1 || echo "Warning: cannot list job dir"
+
           # Wait for job to start
-          while [ ! -f job.started ]; do
-            [ -f job.ended ] && echo "ERROR: Job ended before starting" && exit 1
+          echo "Waiting for job.started..."
+          while [ ! -f "${JOB_DIR}/job.started" ]; do
+            [ -f "${JOB_DIR}/job.ended" ] && echo "ERROR: Job ended before starting" && exit 1
+            echo "  waiting... ($(date))"
             sleep 3
           done
+          echo "Job started!"
 
           # Read connection info (with NFS cache refresh)
-          sleep 2 && ls -la . >/dev/null 2>&1
-          HOSTNAME=$(cat HOSTNAME)
-          SESSION_PORT=$(cat SESSION_PORT)
+          sleep 2 && ls -la "${JOB_DIR}/" >/dev/null 2>&1
+          HOSTNAME=$(cat "${JOB_DIR}/HOSTNAME")
+          SESSION_PORT=$(cat "${JOB_DIR}/SESSION_PORT")
+          echo "HOSTNAME=${HOSTNAME}, SESSION_PORT=${SESSION_PORT}"
 
           # Wait for service to respond
+          echo "Waiting for service at http://${HOSTNAME}:${SESSION_PORT}..."
           for i in $(seq 1 100); do
             if curl -s --connect-timeout 5 --max-time 5 "http://${HOSTNAME}:${SESSION_PORT}" -o /dev/null 2>&1; then
+              echo "Service is ready!"
               echo "HOSTNAME=${HOSTNAME}" >> $OUTPUTS
               echo "SESSION_PORT=${SESSION_PORT}" >> $OUTPUTS
               exit 0
             fi
-            [ -f job.ended ] && echo "ERROR: Job ended" && exit 1
+            [ -f "${JOB_DIR}/job.ended" ] && echo "ERROR: Job ended" && exit 1
+            echo "  attempt ${i}/100... ($(date))"
             sleep 3
           done
           echo "ERROR: Service timeout" && exit 1
