--- a/workflows/desktop/workflow.yaml
+++ b/workflows/desktop/workflow.yaml
@@ -26,6 +26,7 @@ jobs:
           branch: main
           sparse_checkout:
             - workflows/${{ inputs.workflow_dir }}
+            - utils
 
       - name: Transfer inputs from user workspace
         run: |
@@ -96,53 +97,7 @@ jobs:
     steps:
       - name: Wait for desktop ready
         early-cancel: any-job-failed
-        run: |
-          echo "=== Wait for Service ==="
-          echo "PW_PARENT_JOB_DIR: ${PW_PARENT_JOB_DIR}"
-          JOB_DIR="${PW_PARENT_JOB_DIR%/}"
-          echo "Looking for markers in: ${JOB_DIR}"
-
-          # Wait for job to start
-          echo "Waiting for job.started..."
-          while [ ! -f "${JOB_DIR}/job.started" ] && [ ! -f "${JOB_DIR}/job.ended" ]; do
-            sleep 3
-          done
-
-          # Check if job ended before starting
-          if [ -f "${JOB_DIR}/job.ended" ] && [ ! -f "${JOB_DIR}/job.started" ]; then
-            echo "ERROR: Job ended before starting"
-            false
-          fi
-
-          echo "Job started! Reading connection info..."
-          sleep 2
-          HOSTNAME=$(cat "${JOB_DIR}/HOSTNAME")
-          SESSION_PORT=$(cat "${JOB_DIR}/SESSION_PORT")
-          echo "HOSTNAME=${HOSTNAME}, SESSION_PORT=${SESSION_PORT}"
-
-          # Wait for service to respond
-          echo "Waiting for service..."
-          SERVICE_READY=false
-          for i in $(seq 1 100); do
-            if curl -s --connect-timeout 5 --max-time 5 "http://${HOSTNAME}:${SESSION_PORT}" -o /dev/null 2>&1; then
-              SERVICE_READY=true
-              break
-            fi
-            if [ -f "${JOB_DIR}/job.ended" ]; then
-              echo "ERROR: Job ended"
-              false
-            fi
-            sleep 3
-          done
-
-          if [ "$SERVICE_READY" = "true" ]; then
-            echo "Service is ready!"
-            echo "HOSTNAME=${HOSTNAME}" >> $OUTPUTS
-            echo "SESSION_PORT=${SESSION_PORT}" >> $OUTPUTS
-          else
-            echo "ERROR: Service timeout"
-            false
-          fi
+        run: source utils/wait_service.sh
 
   # =============================================================================
   # UPDATE SESSION - configure session proxy with custom slug
